2003-04-30  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl (getRecentLines): Fix for bug #729709: alerts no
	longer working. The ActionStart regexp was being too greedy.
	* tkchat.tcl (tkchat::userPost): Added a client command to open
	a browser on a TIP reference as /tip:NUMBER.

2003-04-04  Pascal Scheffers  <pascal@scheffers.net>
	* tkchat.tcl: Fixed bug 686065. Multiline actions are now
	handled in exactly the same way as multiline messages.
	
2003-03-13  Pascal Scheffers  <pascal@scheffers.net>
	* tkchat.tcl: Fixed a small bug for double-tab. Changed the look
	of the suggested completions for double-tab. Previous completion
	suggestions will now disappear when a new one is shown and after
	about five seconds.

2003-03-12  Pascal Scheffers  <pascal@scheffers.net>

	* tkchat.tcl: Added ::tkchat::nickComplete and <Key-Tab> bindings
	to make bash-style command-completion of the nick under the cursor.
	
2003-03-10  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Applied patch 627521 from Pascal Scheffers to
	provide a search function using /?regexp to highlight matches, /?
	to skip to the previous match and /! to reset the search state.
	* tkchat.tcl: Added some key bindings to the login dialog. Made
	logging in more robust in the face of server failure.

2003-03-10  Reinhard Max  <max@suse.de>

	* tkchat.tcl: Removed the Refresh button, and narrowed the other
	buttons to leave more room for the entry widget.

2003-03-08  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Applied two patched from Pascal Scheffers - one for
	actions from the ircbridge and another to fix the sent message
	history.

2003-03-07  Don Porter  <dgp@users.sf.net>

	* tkchat.tcl: reverted to the previous revision. Last patch broken.
	
2003-03-06  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Enable default key bindings for logon screen.
	- Better handling of logon failure when the server is down.